<resources>
    <string name="app_name">HigherLowerGame</string>
    <string name="correct">Correct! :)</string>
    <string name="incorrect">Incorrect :(</string>
    <string name="title">Guess if the next throw is going to be higer lower or equal.</string>
    <string name="last_throw">Last throw: %d</string>
    <string name="lower">LOWER</string>
    <string name="higher">HIGHER</string>
    <string name="equals">EQUALS</string>
</resources>
